	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-options-dialog.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/utils.cc:
	GnomeCmdData: more C++ rework

	* libgcmd/libgcmd-widget-factory.c:
	* libgcmd/libgcmd-widget-factory.h:
	* src/gnome-cmd-options-dialog.cc:
	Fixed problem #571239 (replacing obsoleted GnomeColorPicker with GtkColorButton)

2009-02-10  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-prepare-xfer-dialog.cc:
	* src/utils.cc:
	* src/utils.h:
	Toggle path/basename/filename selections in F5/F6 dialogs.

	* src/gnome-cmd-xml-config:
	Save additional info on gcmd to XML cfg

2009-02-09  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-user-actions.cc:
	Fixed problem #570727 (usage of deprecated gnome_url_show)

2009-01-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-main-win.cc:
	* src/gnome-cmd-options-dialog.cc:
	* src/utils.cc:
	GnomeCmdData: more C++ rework

2009-01-16  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags.cc:
	typo: Exif Private -> Exif private

2009-01-15  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-main-menu.cc:
	* src/gnome-user-actions.cc:
	tabs: added menus+shortcuts for open/close tabs

2009-01-14  Piotr Eljasiak  <epiotr@use.pl>

	* src/owner.cc:
	Yet another fix for faster startup

2009-01-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-options-dialog.cc:
	* src/gnome-cmd-types.h:
	* src/imageloader.cc:
	GnomeCmdData: more C++ rework

	 */gnome-cmd-file.cc:
	* src/owner.c:
	* src/owner.h:
	Tweaks for making startup faster

	* src/dialogs/gnome-cmd-advrename-profiles-dialog.cc:
	advrename profiles: fix for gtk_list_store_get_path() assertion

2009-01-12  Piotr Eljasiak  <epiotr@use.pl>

	 * src/gnome-cmd-data.cc:
	 * src/gnome-cmd-data.h: